# msgpack-py-vs-rs

./: .gitattributes  .gitignore  README.md
python/msgpack-reader-py/: README.md  pyproject.toml
python/msgpack-reader-py/doc/: windows_benchmark.result.json  wsl2_benchmark.result.json
python/msgpack-reader-py/msgpack_reader_py/: generator.py  main.py  model.py  streaming_reader.py  streaming_reader_bench.py
python/msgpack-reader-py/tests/: test_generator.py  test_model.py  test_streaming_reader.py
rust/: Cargo.toml  README.md
rust/app/: Cargo.toml
rust/app/src/: main.rs
rust/msgpack-core/: Cargo.toml
rust/msgpack-core/benches/: in_memory_stream_benchmark.rs
rust/msgpack-core/src/: errors.rs  lib.rs  models.rs  msgpack_parser.rs
rust/msgpack-core/test_resources/: 10000_items.msgpack
