[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5"
shadow-rs = "0.27.1"
msgpack-core = { path = "../msgpack-core"}
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
shadow-rs = "0.27.1"