[package]
name = "msgpack-core"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
rmp-serde = "1"
rmpv = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "in_memory_stream_benchmark"
harness = false